x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium

  [ Mike Gabriel ]
  * New upstream version (4.1.0.4):
    - Fix version number in VERSION.x2goserver-desktopsharing.
    - x2goserver-x2goagent: Drop x2goagent.keyboard file.
    - x2goversion: Fix situations where ${compfile} contains a
      non-absolute path (e.g. it contains '../'). (Fixes: #1357).
  * debian/x2goserver.postinst:
    + Drop duplicate sourcing of debconf includes.
    + Add Dutch debconf translation. Thanks to Frans Spiesschaert.
    + Add Russian debconf translation. Thanks to Lev Lamberov.
    + Add Portuguese debconf translation. Thanks to Américo Monteiro.
    + Update German translation.

  [ Mihai Moldovan ]
  * New upstream version (4.1.0.4):
    - x2goserver/sbin/x2gocleansessions: add newline before POD block.
    - x2goserver-x2goagent/man/man1/x2goagent.1: add version and date.
    - x2goserver/Makefile: generate man pages from Perl POD.
    - X2Go/Utils.pm: fix missing semicolons.
    - X2Go/Utils.pm: add new is_int subroutine, checking if the provided value
      is an integer.
    - x2goserver/lib: new x2goisint wrapper.
    - x2goserver/lib/x2gois{int,true}: add newlines to (error) output.
    - x2goserver/lib/x2gois{int,true}: add optional warnings.
    - x2goserver/sbin/x2gocleansessions: rework manpage/POD.
    - x2goserver/lib: add new (stub) file x2goupdateoptionsstring to deal with
      options string manipulations. Currently only parsing into an
      intermediate state is supported, the script dumps that state for now.
    - x2goserver/lib/x2goupdateoptionsstring: add function to transform the
      intermediate options string representation back into a string and some
      code that uses this new function.
    - x2goserver/lib/x2go{is{int,true},updateoptionsstring}: use q{} instead
      of empty quotes as per some... coding standard.
    - x2goserver/lib/x2go{is{int,true},updateoptionsstring}: wrap print calls
      with filehandles in curly braces.