@@ -42,6 +42,8 @@ Depends:
  x2goserver-common (>= ${source:Version}),
  x2goserver-x2goagent (<< ${source:Version}.1~),
  x2goserver-x2goagent (>= ${source:Version}),
+ x2goserver-x2gokdrive (<< ${source:Version}.1~),
+ x2goserver-x2gokdrive (>= ${source:Version}),
  xauth,
  xkb-data,
  ${misc:Depends},
@@ -307,6 +309,28 @@ Description: X2Go Server's X2Go Agent
  This package is a wrapper that activates X2Go branding in nxagent.
  Please refer to the nxagent package's description for more information
  on NX.
+
+Package: x2goserver-x2gokdrive
+Architecture: any
+Pre-Depends:
+ dpkg (>= 1.15.7.2),
+Depends:
+ xserver-x2gokdrive,
+ ${misc:Depends},
+Suggests:
+ x2goserver,
+Description: X2Go Server's X2Go KDrive Xserver
+ X2Go is a software suite that uses NX and/or KDrive technology for
+ remote desktop computing.
+ .
+ X2Go KDrive technology implements a remote X11 Xserver backend for
+ modern desktop environments, namely desktops derived from the GNOME
+ desktop shell.
+ .
+ X2Go KDrive does not require an XServer on the client-side, only the
+ X11-independent x2gokdriveclient. esktop session data transfers from
+ server to client use differential image compression and image data gets
+ cached client-side.
 
 Package: x2goserver-xsession
 Architecture: all
