@@ -6,6 +6,7 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
     - x2goserver-x2goagent: Drop x2goagent.keyboard file.
     - x2goversion: Fix situations where ${compfile} contains a
       non-absolute path (e.g. it contains '../'). (Fixes: #1357).
+    - Add X2Go KDrive support (wrapper package: x2goserver-x2gokdrive).
   * debian/x2goserver.postinst:
     + Drop duplicate sourcing of debconf includes.
     + Add Dutch debconf translation. Thanks to Frans Spiesschaert.
